- Added character health and a partially working damage system - Added HealthbarDrawer.cs to visualize player health

--- a/Horn_War_II.csproj
+++ b/Horn_War_II.csproj
@@ -64,6 +64,7 @@
     <Compile Include="GameObjects\DrawableObject.cs" />
     <Compile Include="GameObjects\Effects\Explosion.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
+    <Compile Include="GameObjects\HealthbarDrawer.cs" />
     <Compile Include="GameObjects\Label.cs" />
     <Compile Include="GameObjects\NPC.cs" />
     <Compile Include="GameObjects\ParticleEmitter.cs" />
