--- a/Horn_War_II.csproj
+++ b/Horn_War_II.csproj
@@ -202,6 +202,10 @@
       <Project>{0aad36e3-51a5-4a07-ab60-5c8a66bd38b7}</Project>
       <Name>Farseer Physics MonoGame</Name>
     </ProjectReference>
+    <ProjectReference Include="Penumbra\Source\MonoGame.Penumbra.DesktopGL.csproj">
+      <Project>{3f53d144-2287-485f-91ed-fda8435396b9}</Project>
+      <Name>MonoGame.Penumbra.DesktopGL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
