--- a/Horn_War_II.csproj
+++ b/Horn_War_II.csproj
@@ -58,6 +58,7 @@
     <Compile Include="GameObjects\Decoration\Rock.cs" />
     <Compile Include="GameObjects\Effects\Dust.cs" />
     <Compile Include="GameObjects\BrowserObject.cs" />
+    <Compile Include="Server\Gameserver.cs" />
     <Compile Include="Spawn\SpawnAttribute.cs" />
     <Compile Include="Spawn\SpawnTool.cs">
       <SubType>Form</SubType>
