--- a/Horn_War_II.csproj
+++ b/Horn_War_II.csproj
@@ -59,6 +59,8 @@
     <Compile Include="GameObjects\Decoration\Rock.cs" />
     <Compile Include="GameObjects\Effects\Dust.cs" />
     <Compile Include="GameObjects\BrowserObject.cs" />
+    <Compile Include="GameObjects\Effects\Lightning.cs" />
+    <Compile Include="GameObjects\Tools\BezierCurve.cs" />
     <Compile Include="GameObjects\Weapons\Flashlight.cs" />
     <Compile Include="Spawn\SpawnAttribute.cs" />
     <Compile Include="Spawn\SpawnTool.cs">
@@ -175,7 +177,16 @@
     <Content Include="UI\MainPage.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="UI\MenuNavBG.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="UI\Video_Color_Test_Pattern.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="SDL2.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="UI\ITCBLKAD.TTF">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
